--- a/catinformation.html
+++ b/catinformation.html
@@ -286,7 +286,7 @@
             <hr>
 
             <label for="code"><b>Cat Adoption Code:</b></label>
-            <input type="number" placeholder="Enter cat adoption code" id="code" required>
+            <input type="text" placeholder="Enter cat adoption code" id="code" required>
             <br><br>
 
             <label for="cat color"><b>Color of cat:</b></label><br>
