--- a/about us.html
+++ b/about us.html
@@ -146,12 +146,12 @@
 </header>
 
 <nav>
-    <a href="file:///C:/Users/User/Desktop/TRY%20GROUP/cat.html" class="active">Home</a> |
+    <a href="index.html" class="active">Home</a> |
     <div class="dropdown">
         <a class="dropbtn">About Us</a>|
         <div class="dropdown-content">
-            <a href="file:///C:/Users/User/Desktop/TRY%20GROUP/team%20profile.html" target="_self">Team Profile</a>
-            <a href="file:///C:/Users/User/Desktop/TRY%20GROUP/contact.html" target="_self">Contact</a>
+            <a href="teamprofile.html" target="_self">Team Profile</a>
+            <a href="contact.html" target="_self">Contact</a>
         </div>
     </div>
     <a href="cat adoption.html">Adoption Cat</a> |
